gl33-master/src/test/deca/context/valid/others/return.deca
class Hello {

    int a = 2;
    protected boolean b;

    int bonjour(boolean b) {
        println("hello");
        return a;
    }
}

{
    println("ok");
}