gl33-master/src/test/deca/context/invalid/other/shadowing.deca
class Hello {

    int a = 2;
    protected boolean b;

    int bonjour(boolean a) {
        println("hello");
        return a;
    }
}

{
    println("ok");
}